# rbar

./: Cargo.toml
rbar/: Cargo.toml
rbar-render/: Cargo.toml
rbar-render/shaders/: quad.wgsl  rectangle.wgsl
rbar-render/src/: context.rs  lib.rs  structures.rs
rbar/src/: app.rs  main.rs
rbar/src/bar/: mod.rs  module.rs  node.rs  style.rs
